--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html> 
 <html lang="fr">
+	
 <head>
+
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-5X9NDHBP');</script>
+	<!-- End Google Tag Manager -->
+	
   <meta charset="UTF-8">
   <title>Surn's et fam's 2025</title>
   <style>
@@ -266,6 +276,12 @@
   </style>
 </head>
 <body>
+
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5X9NDHBP"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
   <div class="header">
 	<img src="Logo.png" alt="Arts et Métiers d'Angers" class="left">
     Compilons à nos surn's (2025/2026)
@@ -726,7 +742,6 @@ document.querySelectorAll("#personBox .special-chars span")
 
   attemptLocked = true;
 
-  document.getElementById("btnTrombi").disabled = true;
   document.getElementById("btnSetLives").disabled=true;
   document.querySelector("#settingsBox button").disabled=true;
 
@@ -1009,3 +1024,4 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
