Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="label">Monômes</div>
           <div class="desc">Monômes, paroles et musiques trad's.</div>
         </div>
-        <div class="card" onclick="openPage('galerie.html')">
+        <div class="card" onclick="openPage('Galerie.html')">
           <div class="label">Galerie des Soüvenirs</div>
           <div class="desc">Images et soüvenirs de l'année.</div>
         </div>
@@ -261,4 +261,5 @@
   </script>
 </body>
 </html>
+
 
