--- a/Galerie.html
+++ b/Galerie.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
+  	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-5X9NDHBP');</script>
+	<!-- End Google Tag Manager -->
+  
   <meta charset="UTF-8">
   <title>Galerie Photo</title>
   <style>
@@ -120,6 +129,11 @@
 </head>
 <body>
 
+  	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5X9NDHBP"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+  
   <div class="header">
     <img src="Logo.png" alt="Logo" class="left">
     Galerie 2025
@@ -353,3 +367,4 @@ fullscreen.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
