--- a/carnet.html
+++ b/carnet.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="fr">
 <head>
+
+  	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-5X9NDHBP');</script>
+	<!-- End Google Tag Manager -->
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Carnet — Animation réaliste et interactive</title>
@@ -188,6 +197,12 @@
   </style>
 </head>
 <body>
+
+  	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5X9NDHBP"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+  
   <h1 class="title">Le carn's numérique</h1>
 
   <div class="book" id="book">
@@ -284,3 +299,4 @@
   </script>
 </body>
 </html>
+
