--- a/monomes.html
+++ b/monomes.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="fr">
 <head>
+
+		<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-5X9NDHBP');</script>
+	<!-- End Google Tag Manager -->
+	
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Les Monômes — Lecteur App</title>
@@ -99,6 +108,11 @@ body{
 </head>
 <body>
 
+		<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5X9NDHBP"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
 <div class="app" id="app">
   <div class="header">
     <div class="brand">
@@ -601,4 +615,5 @@ speedEl.value = 1;
 
 </body>
 </html>
+
 
