--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
         </div>
       </section>
 
-      <div class="footer">Fait avec coher's par l'un de vos chicop’s, envoyez moi un message privé pour de potentiels problèmes !</div>
+      <div class="footer">Fait avec coher's par l'un de vos chicop’s, brassez moi en privé pour de potentiels problèmes !
+	  Version 1.0 - Je suis déjà au courant pour la vidéal et les photos de la gallerie...</div>
     </main>
   </div>
 
@@ -261,5 +262,6 @@
   </script>
 </body>
 </html>
+
 
 
