--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
         </div>
       </section>
 
-      <div class="footer">Fait avec coher's par l'un de vos chicop’s, brassez moi en privé pour de potentiels problèmes !
-	  Version 1.0 - Je suis déjà au courant pour la vidéal et les photos de la gallerie...</div>
+      <div class="footer">Fait avec coher's par l'un de vos chicop’s, brassez moi en privé pour de potentiels problèmes !<BR> Version 1.0 - Je suis déjà au courant pour la vidéal et les photos de la gallerie...</div>
     </main>
   </div>
 
@@ -262,6 +261,7 @@
   </script>
 </body>
 </html>
+
 
 
 
