--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -425,7 +425,7 @@ const initialPeople = [
 	{ prenom:'Ali', nom:'Hassny', surnom:'⁠[e^x]pre’∫', numero:'⁠92-160-116', photo:'Trombinoscope/Ali_Hassny.jpg' , tél: "0748770388"},
 	{ prenom:'Louis', nom:'Hazard', surnom:'viensbriserlacharte dansma', numero:'106-113', photo:'Trombinoscope/Louis_Hazard.jpg' , tél: "0601297168"},
 	{ prenom:'Lilian', nom:'Hintzy', surnom:'Poket', numero:'51-4-55', photo:'Trombinoscope/Lilian_Hintzy.jpg' , tél: "0637674973"},
-	{ prenom:'Mathias', nom:'Houari-Zaniroli', surnom:'Krak', numero:'152', photo:'Trombinoscope/Mathias_Houari-Zaniroli.jpg' , tél: "0780406875"},
+	{ prenom:'Mathias', nom:'Houari-Zaniroli', surnom:'Kéfué', numero:'152', photo:'Trombinoscope/Mathias_Houari-Zaniroli.jpg' , tél: "0780406875"},
 	{ prenom:'Arthur', nom:'Houëix', surnom:'[β]mèche', numero:'102P-38', photo:'Trombinoscope/Arthur_Houëix.jpg' , tél: "0643892049"},
 	{ prenom:'Yoann', nom:'Jahier', surnom:"Kra[♥]‘s", numero:'143-126', photo:'Trombinoscope/Yoann_Jahier.jpg' , tél: "0670058157"},
 	{ prenom:'Florian', nom:'Jégo', surnom:'Toboon', numero:'98', photo:'Trombinoscope/Florian_Jégo.jpg' , tél: "??"},
@@ -456,7 +456,7 @@ const initialPeople = [
 	{ prenom:'Maxime', nom:'Lugaz', surnom:"Z[A]³ck'∫", numero:'76-86-108', photo:'Trombinoscope/Maxime_Lugaz.jpg' , tél: "0649315189"},
 	{ prenom:'Kilian', nom:'Mahé', surnom:'Lal[π]ne', numero:'47', photo:'Trombinoscope/Kilian_Mahé.jpg' , tél: "0749165613"},
 	{ prenom:'Romain', nom:'Mancel', surnom:'A[D]', numero:'61-159', photo:'Trombinoscope/Romain_Mancel.jpg' , tél: "0766245685"},
-	{ prenom:'Cloé', nom:'Marchand', surnom:'[2π]nar', numero:'5²5-94-25-155', photo:'Trombinoscope/Cloé_Marchand.jpg' , tél: "0651981610"},
+	{ prenom:'Cloé', nom:'Marchand', surnom:'[2π]nar', numero:'5²-5-94-25-155', photo:'Trombinoscope/Cloé_Marchand.jpg' , tél: "0651981610"},
 	{ prenom:'Théoping', nom:'Marchix', surnom:'[O][π]che', numero:'130', photo:'Trombinoscope/Théoping_Marchix.jpg' , tél: "0675190280"},
 	//{ prenom:'Phénicia', nom:'Marionval', surnom:'??', numero:'??', photo:'Trombinoscope/Phénicia_Marionval.jpg' , tél: ""},
 	{ prenom:'Enzo', nom:'Martin', surnom:'[TT]lot', numero:'77', photo:'Trombinoscope/Enzo_Martin.jpg' , tél: "0785054965"},
@@ -992,5 +992,6 @@ window.addEventListener("load", function() {
 
 </body>
 </html>
+
 
 
