--- a/jeu.html
+++ b/jeu.html
@@ -528,7 +528,7 @@ const initialPeople = [
 	{ prenom:'Ali', nom:'Hassny', surnom:'⁠[e^x]pre’∫', numero:'⁠92-160-116', photo:'Trombinoscope/Ali_Hassny.jpg' },
 	{ prenom:'Louis', nom:'Hazard', surnom:'viensbriserlacharte dansma', numero:'106-113', photo:'Trombinoscope/Louis_Hazard.jpg' , tél: ""},
 	{ prenom:'Lilian', nom:'Hintzy', surnom:'Poket', numero:'51-4-55', photo:'Trombinoscope/Lilian_Hintzy.jpg' },
-	{ prenom:'Mathias', nom:'Houari-Zaniroli', surnom:'Krak', numero:'152', photo:'Trombinoscope/Mathias_Houari-Zaniroli.jpg' },
+	{ prenom:'Mathias', nom:'Houari-Zaniroli', surnom:'Kéfué', numero:'152', photo:'Trombinoscope/Mathias_Houari-Zaniroli.jpg' },
 	{ prenom:'Arthur', nom:'Houëix', surnom:'[β]mèche', numero:'102P-38', photo:'Trombinoscope/Arthur_Houëix.jpg' },
 	{ prenom:'Yoann', nom:'Jahier', surnom:"Kra[♥]‘s", numero:'143-126', photo:'Trombinoscope/Yoann_Jahier.jpg' },
 	{ prenom:'Florian', nom:'Jégo', surnom:'Toboon', numero:'98', photo:'Trombinoscope/Florian_Jégo.jpg' },
@@ -1028,4 +1028,5 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
