--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -441,7 +441,7 @@ const initialPeople = [
 	{ prenom:'Marie', nom:'de Château-Thierry', surnom:'Ti-grrr[S]', numero:'117', photo:'Trombinoscope/Marie_Le-Bout-De-Chateau-Thierry-De-Beaumanoir.jpg' , tél: "0749901550"},
 	{ prenom:'Ethan', nom:'Le Callonnec', surnom:'+[U]ltra', numero:'7²', photo:'Trombinoscope/Ethan_Le Callonnec.jpg' , tél: "0766001742"},
 	{ prenom:'Tom', nom:'Lechevalier', surnom:'Perce Val', numero:'156', photo:'Trombinoscope/Tom_Lechevalier.jpg' , tél: "0616251459"},
-	{ prenom:'Gabriel', nom:'Le Duff', surnom:'??', numero:'??', photo:'Trombinoscope/Gabriel_Le Duff.jpg' , tél: "0666968556"},
+	{ prenom:'Gabriel', nom:'Le Duff', surnom:'Jvoispal', numero:'142', photo:'Trombinoscope/Gabriel_Le Duff.jpg' , tél: "0666968556"},
 	{ prenom:'Jean', nom:'Le Forestier', surnom:'Zipette', numero:'97-(21)', photo:'Trombinoscope/Jean_Le Forestier.png' , tél: "0749180978"},
 	{ prenom:'Jules', nom:'Lefort', surnom:'Niké', numero:'335', photo:'Trombinoscope/Jules_Lefort.jpg' , tél: "0608438717"},
 	{ prenom:'Timon', nom:'Legal', surnom:'[K]pôn', numero:'72', photo:'Trombinoscope/Timon_Légal.jpg' , tél: "0781226446"},
@@ -992,6 +992,7 @@ window.addEventListener("load", function() {
 
 </body>
 </html>
+
 
 
 
