--- a/jeu.html
+++ b/jeu.html
@@ -544,7 +544,7 @@ const initialPeople = [
 	{ prenom:'Marie', nom:'de Château-Thierry', surnom:'Ti-grrr[S]', numero:'117', photo:'Trombinoscope/Marie_Le-Bout-De-Chateau-Thierry-De-Beaumanoir.jpg' },
 	{ prenom:'Ethan', nom:'Le Callonnec', surnom:'+[U]ltra', numero:'7²', photo:'Trombinoscope/Ethan_Le Callonnec.jpg' },
 	{ prenom:'Tom', nom:'Lechevalier', surnom:'Perce Val', numero:'156', photo:'Trombinoscope/Tom_Lechevalier.jpg' },
-	{ prenom:'Gabriel', nom:'Le Duff', surnom:'??', numero:'??', photo:'Trombinoscope/Gabriel_Le Duff.jpg' },
+	{ prenom:'Gabriel', nom:'Le Duff', surnom:'Jvoispal', numero:'142', photo:'Trombinoscope/Gabriel_Le Duff.jpg' },
 	{ prenom:'Jean', nom:'Le Forestier', surnom:'Zipette', numero:'97-(21)', photo:'Trombinoscope/Jean_Le Forestier.png' },
 	{ prenom:'Jules', nom:'Lefort', surnom:'Niké', numero:'335', photo:'Trombinoscope/Jules_Lefort.jpg' },
 	{ prenom:'Timon', nom:'Legal', surnom:'[K]pôn', numero:'72', photo:'Trombinoscope/Timon_Légal.jpg' },
@@ -1028,5 +1028,6 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
