--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -463,7 +463,7 @@ const initialPeople = [
 	{ prenom:'Basile', nom:'Martin', surnom:'Barbalcoolic[E]', numero:'126-143-110-165', photo:'Trombinoscope/Basile_Martin.jpg' , tél: "0781841813"},
 	{ prenom:'Côme', nom:'Maunier', surnom:'Avi', numero:'11-18-154', photo:'Trombinoscope/Côme_Maunier.jpg' , tél: "0666136466"},
 	{ prenom:'Gabriel', nom:'Méritet', surnom:'Tula', numero:'128-129-59♥', photo:'Trombinoscope/Gabriel_Méritet.jpg' , tél: "0676381193"},
-	{ prenom:'Paul', nom:'Métivier', surnom:'[n]Dou?', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' , tél: "0769477827"},
+	{ prenom:'Paul', nom:'Métivier', surnom:'[n]Dou!?', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' , tél: "0769477827"},
 	{ prenom:'Jean', nom:'Mijonnet', surnom:'Glij', numero:'170-71', photo:'Trombinoscope/Jean_Mijonnet.png' , tél: "0601811413"},
 	{ prenom:'Lucian', nom:'Millerioux', surnom:'Zaagermeister', numero:'131', photo:'Trombinoscope/Lucian_Millerioux.jpg' , tél: "0684340286"},
 	{ prenom:'Baptiste', nom:'Monnier', surnom:"Kho'pate", numero:'73-16', photo:'Trombinoscope/Baptiste_Monnier.jpg' , tél: "0659039049"},
@@ -992,6 +992,7 @@ window.addEventListener("load", function() {
 
 </body>
 </html>
+
 
 
 
