--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -372,7 +372,7 @@ const initialPeople = [
 	{ prenom:'Léonard', nom:'Chauvin', surnom:'[B]rbe', numero:'78 (121-89)', photo:'Trombinoscope/Léonard_Chauvin.jpg' , tél: "0782662231"},
 	{ prenom:'Aloïs', nom:'Chombart de Lauwe', surnom:'Berouj', numero:'180-107', photo:'Trombinoscope/Aloïs_Chombard.jpg' , tél: "0640917070"},
 	{ prenom:'Enzo', nom:'Cingal', surnom:'Alfa[2][S]', numero:'169Djelaba136', photo:'Trombinoscope/Enzo_Cingal.jpg' , tél: "0695045495"},
-	{ prenom:'Arthus', nom:'Colas', surnom:'??', numero:'??', photo:'Trombinoscope/Arthus_Colas.jpg' , tél: "0777701610"},
+	{ prenom:'Arthus', nom:'Colas', surnom:'[&]Nico', numero:'173-171', photo:'Trombinoscope/Arthus_Colas.jpg' , tél: "0777701610"},
 	{ prenom:'Louise', nom:'Collomb', surnom:'Yat[A]k', numero:'103', photo:'Trombinoscope/Louise_Collomb.png' , tél: "0649800379"},
 	{ prenom:'François', nom:'Colluard', surnom:'??', numero:'7', photo:'Trombinoscope/François_Colluard.png' , tél: "0781838646"},
 	{ prenom:'Marie-Lou', nom:'Cossé', surnom:'Kyl[T]', numero:'89-121-78', photo:'Trombinoscope/Marie-Lou_Cossé.jpg' , tél: "0769196960"},
@@ -390,7 +390,7 @@ const initialPeople = [
 	{ prenom:'Wandrille', nom:'de Montfort', surnom:'Khlys', numero:'157', photo:'Trombinoscope/Wandrille_De Montfort.jpg' , tél: "0636112513"},
 	//{ prenom:'Arthur', nom:'de Oliveira Lopes', surnom:'??', numero:'??', photo:'Trombinoscope/Arthur_De Oliveira Lopes.jpg' , tél: ""},
 	{ prenom:'Jean-Denis', nom:'de Robillard', surnom:'Strike', numero:'911', photo:'Trombinoscope/Jean-Denis.jpg' , tél: "0762684679"},
-	{ prenom:'Baptiste', nom:'Desmars', surnom:'L[A][B][K]ne', numero:'1582', photo:'Trombinoscope/Baptiste_Desmars.jpg' , tél: "0768296138"},
+	{ prenom:'Baptiste', nom:'Desmars', surnom:'L[A][B][K]ne', numero:'15-82', photo:'Trombinoscope/Baptiste_Desmars.jpg' , tél: "0768296138"},
 	{ prenom:'Malo', nom:'Dessard', surnom:'seg[a]', numero:'144', photo:'Trombinoscope/Malo_Dessard.jpg' , tél: "0652941527"},
 	{ prenom:'Philippe', nom:'Drouineau', surnom:'A[τ]s', numero:'135', photo:'Trombinoscope/Philippe_Drouineau.jpg' , tél: "0767375156"},
 	{ prenom:'Clément', nom:'Ducy', surnom:'Flard', numero:'127-99', photo:'Trombinoscope/Clément_Ducy.jpg' , tél: "0788232080"},
@@ -992,6 +992,7 @@ window.addEventListener("load", function() {
 
 </body>
 </html>
+
 
 
 
