--- a/jeu.html
+++ b/jeu.html
@@ -475,7 +475,7 @@ const initialPeople = [
 	{ prenom:'Léonard', nom:'Chauvin', surnom:'[B]rbe', numero:'78 (121-89)', photo:'Trombinoscope/Léonard_Chauvin.jpg' },
 	{ prenom:'Aloïs', nom:'Chombart de Lauwe', surnom:'Berouj', numero:'180-107', photo:'Trombinoscope/Aloïs_Chombard.jpg' },
 	{ prenom:'Enzo', nom:'Cingal', surnom:'Alfa[2][S]', numero:'169Djelaba136', photo:'Trombinoscope/Enzo_Cingal.jpg' },
-	{ prenom:'Arthus', nom:'Colas', surnom:'??', numero:'??', photo:'Trombinoscope/Arthus_Colas.jpg' },
+	{ prenom:'Arthus', nom:'Colas', surnom:'[&]Nico', numero:'173-171', photo:'Trombinoscope/Arthus_Colas.jpg' },
 	{ prenom:'Louise', nom:'Collomb', surnom:'Yat[A]k', numero:'103', photo:'Trombinoscope/Louise_Collomb.png' },
 	{ prenom:'François', nom:'Colluard', surnom:'??', numero:'7', photo:'Trombinoscope/François_Colluard.png' },
 	{ prenom:'Marie-Lou', nom:'Cossé', surnom:'Kyl[T]', numero:'89-121-78', photo:'Trombinoscope/Marie-Lou_Cossé.jpg' },
@@ -566,7 +566,7 @@ const initialPeople = [
 	{ prenom:'Basile', nom:'Martin', surnom:'Barbalcoolic[E]', numero:'126-143-110-165', photo:'Trombinoscope/Basile_Martin.jpg' },
 	{ prenom:'Côme', nom:'Maunier', surnom:'Avi', numero:'11-18-154', photo:'Trombinoscope/Côme_Maunier.jpg' },
 	{ prenom:'Gabriel', nom:'Méritet', surnom:'Tula', numero:'128-129-59♥', photo:'Trombinoscope/Gabriel_Méritet.jpg' },
-	{ prenom:'Paul', nom:'Métivier', surnom:'[n]Dou?', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' },
+	{ prenom:'Paul', nom:'Métivier', surnom:'[n]Dou!?', numero:'146', photo:'Trombinoscope/Paul_Metivier.jpg' },
 	{ prenom:'Jean', nom:'Mijonnet', surnom:'Glij', numero:'170-71', photo:'Trombinoscope/Jean_Mijonnet.png' },
 	{ prenom:'Lucian', nom:'Millerioux', surnom:'Zaagermeister', numero:'131', photo:'Trombinoscope/Lucian_Millerioux.jpg' },
 	{ prenom:'Baptiste', nom:'Monnier', surnom:"Kho'pate", numero:'73-16', photo:'Trombinoscope/Baptiste_Monnier.jpg' },
@@ -1028,6 +1028,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
