--- a/monomes.html
+++ b/monomes.html
@@ -413,6 +413,48 @@ Vous êtes des milliers
 D’Archis qui ont vingt ans.
 
 	REFRAIN`
+      },
+
+	{
+        id: 'm5',
+        title: "Monôme de Siber's",
+        tags: ['texte','audio'],
+        audio: 'audio/monome5.mp3',
+        lyrics: `Dans le froid du grand nord d'la Lorraine 
+Résonne dans le brouillard, 
+Une chanson qui enivre et entraîne 
+Toute une promo de Gadzarts.
+D'une même voix et d'un même pas
+L'amitié qu'ensemble ils tressent,
+Jamais ne mourra tant que resonnera
+Dans leur coeur le monôme de Siber's 
+
+S'il est vrai qu'ils sont les nouveaux nés 
+D'la famille des tabagnons,
+Ne croyez pas qu'ils soient les derniers 
+S'il s'agit des Traditions.
+La Strass ne peut pas comprendre que
+S'ils n'enseignaient qu'à des pek's,
+Elle ne serait rien d'plus qu'un vulgaire bahut 
+S'il manquait le monôme de Siber's 
+
+J'entends que parmis eux une dizaine 
+Vient d'une lointaine contrée,
+Toutes vos tentatives sont vaines 
+Pour les différencier.
+Car chez les PG le mot "étranger"
+S'est noyé dans la coher's,
+On l'a remplacé par Fraternité.
+Dans chaque phrase du monôme de Siber's.
+
+Voilà le monôme qui s'achève 
+Mais c'est loin d'être finit 
+Car ici pas de pause ni de trêve 
+Tant qu'on est tous réunis. 
+Voici l'heure de se paill'ser un peu 
+Voici l'heure de l'aper's
+On le servira , on le quillonera
+En chantant le monôme de Siber's.`
       }
     ];
 
@@ -615,6 +657,7 @@ speedEl.value = 1;
 
 </body>
 </html>
+
 
 
 
