--- a/monomes.html
+++ b/monomes.html
@@ -417,7 +417,7 @@ D’Archis qui ont vingt ans.
 
 	{
         id: 'm5',
-        title: "Monôme de Siber's",
+        title: "Monôme de Siber's (gnassé par Samoal i7, bientôt à N !)",
         tags: ['texte','audio'],
         audio: 'audio/monome5.mp3',
         lyrics: `Dans le froid du grand nord d'la Lorraine 
@@ -657,6 +657,7 @@ speedEl.value = 1;
 
 </body>
 </html>
+
 
 
 
