--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -406,7 +406,7 @@ const initialPeople = [
 	{ prenom:'Brieuc', nom:'Gac', surnom:'Coüch[&]', numero:'67-65', photo:'Trombinoscope/Brieuc_Gac.jpg' , tél: "0772216323"},
 	{ prenom:'Théo', nom:'Gauchot', surnom:'[FA]SHOW', numero:'23', photo:'Trombinoscope/Théo_Gauchot.jpg' , tél: "0621691070"},
 	{ prenom:'Léopold', nom:'Gennequin', surnom:'Morpheus', numero:'70-60', photo:'Trombinoscope/Léopold_Gennequin.png' , tél: "0783943132"},
-	{ prenom:'Benjamin', nom:'Genon Mandy', surnom:'??', numero:'??', photo:'Trombinoscope/Benjamin_Genon Mandy.jpg' , tél: "??"},
+	{ prenom:'Benjamin', nom:'Genon Mandy', surnom:'Jamy', numero:'90-158', photo:'Trombinoscope/Benjamin_Genon Mandy.jpg' , tél: "0665243929"},
 	{ prenom:'Arthur', nom:'Georget', surnom:"S'[T]b[A]n", numero:'48-81', photo:'Trombinoscope/Arthur_Georget.jpg' , tél: "0663437965"},
 	{ prenom:'Clarisse', nom:'Gerbaud', surnom:'Boeing ', numero:'911', photo:'Trombinoscope/Clarisse_Gerbaud.jpg' , tél: "0649591148"},
 	{ prenom:'Fiona', nom:'Gigou', surnom:'Lag', numero:'3', photo:'Trombinoscope/Fiona_Gigou.jpg' , tél: "0679994355"},
@@ -494,7 +494,7 @@ const initialPeople = [
 	{ prenom:'Malo', nom:'Santolalla', surnom:'Tasty', numero:'150∇', photo:'Trombinoscope/Malo_Santolalla.jpg' , tél: "0768125053"},
 	{  prenom:'Benjamin', nom:'Sappa', surnom:'M(A)^21RC', numero:'21-(97)^0', photo:'Trombinoscope/Benjamin_Sappa.jpg', tél: "0650782103" },
 	{ prenom:'Amr', nom:'Sarhan', surnom:'[A]bout', numero:'40² -140', photo:'Trombinoscope/Amr_Sarhan.jpg' , tél: "0753196157"},
-	{ prenom:'Benjamin', nom:'Seguin', surnom:'MaBiquette', numero:'113-106', photo:'Trombinoscope/Benjamin_Seguin.jpg' , tél: ""},
+	{ prenom:'Benjamin', nom:'Seguin', surnom:'MaBiquette', numero:'113-106', photo:'Trombinoscope/Benjamin_Seguin.jpg' , tél: "0632698523"},
 	{ prenom:'Maria', nom:'Silva', surnom:'Dukunata', numero:'137', photo:'Trombinoscope/Maria_Silva.jpg' , tél: "+55 21 99595-2610"},
 	{ prenom:'Nicolas', nom:'Taroux', surnom:"L’[1]pet", numero:'12-105', photo:'Trombinoscope/Nicolas_Taroux.jpg' , tél: "0661146975"},
 	{ prenom:'Pierre', nom:'Teissier', surnom:"Cristal's", numero:'155-119', photo:'Trombinoscope/Pierre_Teissier.jpg' , tél: "0651534700"},
@@ -992,6 +992,7 @@ window.addEventListener("load", function() {
 
 </body>
 </html>
+
 
 
 
