--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -343,7 +343,7 @@ const initialPeople = [
 	{ prenom:'Venance', nom:'Andriamihantamanana', surnom:'[Molo]²', numero:'119-155', photo:'Trombinoscope/Venance_Andriamihantamanana.jpg' , tél: "0666955018"},
 	{ prenom:'Kenzo', nom:'Andrieu', surnom:'Djir[L]', numero:'154-18~11', photo:'Trombinoscope/Kenzo_Andrieu.jpg' , tél: "0629920827"},
 	//{ prenom:'Antoine', nom:'Archevêque', surnom:'??', numero:'??', photo:'Trombinoscope/Antoine_Archevêque.jpg' , tél: ""},
-	{ prenom:'Élise', nom:'Arnaud', surnom:'Tosp[i]n', numero:'129-59♥-128', photo:'Trombinoscope/Élise_Arnaud.jpg' , tél: "0772288644"},
+	{ prenom:'Élise', nom:'Arnaud', surnom:'Tos[π]n', numero:'129-59♥-128', photo:'Trombinoscope/Élise_Arnaud.jpg' , tél: "0772288644"},
 	{ prenom:'Fatima Ezzahra', nom:'Ataf', surnom:'π-ta[F]', numero:'81-48', photo:'Trombinoscope/Fatima Ezzahra_Ataf.png' , tél: "0635001558"},
 	{ prenom:'Margaux', nom:'Bagas', surnom:'Ar[T]mis', numero:'79', photo:'Trombinoscope/Margaux_Bagas.jpg' , tél: "0626995309"},
 	{ prenom:'Bastien', nom:'Balbine-Le Corre', surnom:'Fen [T]', numero:'6', photo:'Trombinoscope/Bastien_Balbine-Le Corre.jpg' , tél: "0641043342"},
@@ -984,6 +984,7 @@ window.addEventListener("load", function () {
 
 </body>
 </html>
+
 
 
 
