--- a/jeu.html
+++ b/jeu.html
@@ -445,7 +445,7 @@ const initialPeople = [
 	{ prenom:'Venance', nom:'Andriamihantamanana', surnom:'[Molo]²', numero:'119-155', photo:'Trombinoscope/Venance_Andriamihantamanana.jpg' },
 	{ prenom:'Kenzo', nom:'Andrieu', surnom:'Djir[L]', numero:'154-18~11', photo:'Trombinoscope/Kenzo_Andrieu.jpg' },
 	//{ prenom:'Antoine', nom:'Archevêque', surnom:'??', numero:'??', photo:'Trombinoscope/Antoine_Archevêque.jpg' },
-	{ prenom:'Élise', nom:'Arnaud', surnom:'Tosp[i]n', numero:'129-59♥-128', photo:'Trombinoscope/Élise_Arnaud.jpg' },
+	{ prenom:'Élise', nom:'Arnaud', surnom:'Tos[π]n', numero:'129-59♥-128', photo:'Trombinoscope/Élise_Arnaud.jpg' },
 	{ prenom:'Fatima Ezzahra', nom:'Ataf', surnom:'π-ta[F]', numero:'81-48', photo:'Trombinoscope/Fatima Ezzahra_Ataf.png' },
 	{ prenom:'Margaux', nom:'Bagas', surnom:'Ar[T]mis', numero:'79', photo:'Trombinoscope/Margaux_Bagas.jpg' },
 	{ prenom:'Bastien', nom:'Balbine-Le Corre', surnom:'Fen [T]', numero:'6', photo:'Trombinoscope/Bastien_Balbine-Le Corre.jpg' },
@@ -1028,6 +1028,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
