Update Lilian Furio

--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -403,7 +403,7 @@ const initialPeople = [
 	{ prenom:'Pedro', nom:'Fernandes', surnom:'Lekch[X]', numero:'21-97', photo:'Trombinoscope/Pedro_Fernandes.jpg' , tél: "0769948178"},
 	{ prenom:'Thomas', nom:'Flon', surnom:'[A]’lakrem', numero:'112', photo:'Trombinoscope/Thomas_Flon.jpg' , tél: "0652208937"},
 	{ prenom:'Steeve', nom:'Foucher', surnom:"Eveet'∫", numero:'53block~56', photo:'Trombinoscope/Steeve_Foucher.jpg' , tél: "0604456474"},
-	{ prenom:'Lilian', nom:'Furio', surnom:'Ori[π]ler', numero:'54', photo:'Trombinoscope/Lilian_Furio.jpg' , tél: "0640767134"},
+	{ prenom:'Lilian', nom:'Furio', surnom:'∫[π][ρ]', numero:'54', photo:'Trombinoscope/Lilian_Furio.jpg' , tél: "0640767134"},
 	{ prenom:'Brieuc', nom:'Gac', surnom:'Coüch[&]', numero:'67-65', photo:'Trombinoscope/Brieuc_Gac.jpg' , tél: "0772216323"},
 	{ prenom:'Théo', nom:'Gauchot', surnom:'[FA]SHOW', numero:'23', photo:'Trombinoscope/Théo_Gauchot.jpg' , tél: "0621691070"},
 	{ prenom:'Léopold', nom:'Gennequin', surnom:'Morpheus', numero:'70-60', photo:'Trombinoscope/Léopold_Gennequin.png' , tél: "0783943132"},
@@ -984,6 +984,7 @@ window.addEventListener("load", function () {
 
 </body>
 </html>
+
 
 
 
