Update Lilian Furio

--- a/jeu.html
+++ b/jeu.html
@@ -505,7 +505,7 @@ const initialPeople = [
 	{ prenom:'Pedro', nom:'Fernandes', surnom:'Lekch[X]', numero:'21-97', photo:'Trombinoscope/Pedro_Fernandes.jpg' , tél: ""},
 	{ prenom:'Thomas', nom:'Flon', surnom:'[A]’lakrem', numero:'112', photo:'Trombinoscope/Thomas_Flon.jpg' },
 	{ prenom:'Steeve', nom:'Foucher', surnom:"Eveet'∫", numero:'53block~56', photo:'Trombinoscope/Steeve_Foucher.jpg' },
-	{ prenom:'Lilian', nom:'Furio', surnom:'Ori[π]ler', numero:'54', photo:'Trombinoscope/Lilian_Furio.jpg' },
+	{ prenom:'Lilian', nom:'Furio', surnom:'∫[π][ρ]', numero:'54', photo:'Trombinoscope/Lilian_Furio.jpg' },
 	{ prenom:'Brieuc', nom:'Gac', surnom:'Coüch[&]', numero:'67-65', photo:'Trombinoscope/Brieuc_Gac.jpg' },
 	{ prenom:'Théo', nom:'Gauchot', surnom:'[FA]SHOW', numero:'23', photo:'Trombinoscope/Théo_Gauchot.jpg' },
 	{ prenom:'Léopold', nom:'Gennequin', surnom:'Morpheus', numero:'70-60', photo:'Trombinoscope/Léopold_Gennequin.png' },
@@ -1028,6 +1028,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
